end-of-file character set in the settings node

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
     "-v", "/var/run/docker.sock:/var/run/docker.sock"
   ],
   "settings": {
+    "files.eol": "\n",
     "terminal.integrated.shell.linux": "/bin/bash"
   },
   "extensions": [
