install latest version of go

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,3 +2,6 @@ FROM aztfmod/rover:0.15.0-alpha20210210-2103.0304
 
 RUN sudo apt-get update \
     && sudo apt-get install -y wget jq nano
+
+RUN sudo wget https://golang.org/dl/go1.16.linux-amd64.tar.gz \
+    && sudo tar -C /usr/local -xzf go1.16.linux-amd64.tar.gz
