--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM aztfmod/rover:0.15.0-alpha20210210-2103.0304
+FROM aztfmod/rover:0.13.6-2103.0304
 
 RUN sudo apt-get update \
     && sudo apt-get install -y wget jq nano
