added support for working full and basic mode

--- a/scripts/gitlab-server/runner/custom-agent/Dockerfile
+++ b/scripts/gitlab-server/runner/custom-agent/Dockerfile
@@ -2,7 +2,7 @@ FROM aztfmod/rover-agent:0.13.6-2103.0304-gitlab
 
 
 COPY ./gitlab.sh .
-COPY ./.data.crt /usr/local/share/ca-certificates/gitlab.crt
+COPY ./gitlab.crt /usr/local/share/ca-certificates/gitlab.crt
 
 RUN sudo chmod +x ./gitlab.sh && \
     sudo update-ca-certificates 
