Updated to dynamic git group var

--- a/caf/caf_orchestrator/.gitlab-ci.yml
+++ b/caf/caf_orchestrator/.gitlab-ci.yml
@@ -29,8 +29,8 @@ foundations:
     - gitlab-runner-1
   script:
     - |
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/base_config.git
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/caf_modules_public.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/base_config.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules_public.git
 
       az login --identity --username ${MSI_ID_01}
 
@@ -48,8 +48,8 @@ shared_services:
     - gitlab-runner-2
   script:
     - |
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/base_config.git
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/caf_modules_public.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/base_config.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules_public.git
 
       az login --identity --username ${MSI_ID_02}
 
@@ -68,8 +68,8 @@ networking:
     - gitlab-runner-2
   script:
     - |
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/base_config.git
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/caf_modules_public.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/base_config.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules_public.git
 
       az login --identity --username ${MSI_ID_02}
 
@@ -92,8 +92,8 @@ aks:
     - gitlab-runner-3
   script:
     - |
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/app_config_aks.git
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/caf_modules_app.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/app_config_aks.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules_app.git
 
       az login --identity --username ${MSI_ID_03}
 
@@ -111,8 +111,8 @@ argocd:
     - gitlab-runner-4
   script:
     - |
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/app_config_argocd.git
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/caf_modules_app.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/app_config_argocd.git
+      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules_app.git
 
       az login --identity --username ${MSI_ID_04}
 
@@ -138,8 +138,8 @@ argocd:
 #     - |
 #       env
 
-#       git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/base_config.git
-#       git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/reference_app_caf/caf_modules_public.git
+#       git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/base_config.git
+#       git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules_public.git
 
 #       az login --identity --username ${MSI_ID}
 
