--- a/symphony.yml
+++ b/symphony.yml
@@ -4,62 +4,62 @@ levels:
     stacks:
     - stack: launchpad
       repo: base
-      landingZonePath: /tf/caf/public/landingzones/caf_launchpad
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level0/launchpad
+      landingZonePath: /tf/caf/symphony/caf_modules/landingzones/caf_launchpad
+      landingZoneConfigurationPath: /tf/caf/symphony/config_launchpad/level0/launchpad
     launchpad: true
   - level: level1
     msiId: <insert client id guid here>
     stacks:
     - stack: foundations
       repo: base
-      landingZonePath: /tf/caf/public/landingzones/caf_foundations/
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level1
+      landingZonePath: /tf/caf/symphony/caf_modules/landingzones/caf_solution/
+      landingZoneConfigurationPath: /tf/caf/symphony/config_platform/level1/foundations
   - level: level2
     msiId: <insert client id guid here>
     stacks:
     - stack: shared_services
       repo: base
-      landingZonePath: /tf/caf/public/landingzones/caf_shared_services/
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level2/shared_services
+      landingZonePath:  /tf/caf/symphony/caf_modules/landingzones/caf_solution/
+      landingZoneConfigurationPath: /tf/caf/symphony/config_platform/level2/shared_services
       tfState: caf_shared_services.tfstate
     - stack: networking_hub
       repo: base
-      landingZonePath: /tf/caf/public/landingzones/caf_networking/
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level2/networking/hub
+      landingZonePath:  /tf/caf/symphony/caf_modules/landingzones/caf_solution/
+      landingZoneConfigurationPath: /tf/caf/symphony/config_platform/level2/networking/hub
       tfState: networking_hub.tfstate
   - level: level3
     msiId: <insert client id guid here>  
     stacks:
     - stack: catalog_service
       repo: catalog
-      landingZonePath: /tf/caf/public/landingzones/caf_solutions/catalog
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level3/catalog
+      landingZonePath:  /tf/caf/symphony/caf_modules/landingzones/caf_solution/
+      landingZoneConfigurationPath: /tf/caf/config_app_testapp/level3/catalog
       tfState: catalog_service.tfstate
     - stack: search_service
       repo: search
-      landingZonePath: /tf/caf/public/landingzones/caf_solutions/search
+      landingZonePath:  /tf/caf/symphony/caf_modules/landingzones/caf_solution/
       landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level3/search
       tfState: search_service.tfstate
     - stack: frontdoor_service
       repo: frontdoor
-      landingZonePath: /tf/caf/public/landingzones/caf_solutions/frontdoor
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level3/frontdoor
+      landingZonePath:  /tf/caf/symphony/caf_modules/landingzones/caf_solution/
+      landingZoneConfigurationPath: /tf/caf/config_app_testapp/level3/frontdoor
       tfState: frontdoor_service.tfstate
   - level: level4
     msiId: <insert client id guid here>  
     stacks:
     - stack: catalog_service_application
       repo: catalog
-      landingZonePath: /tf/caf/public/landingzones/caf_solutions/catalog_app_addon
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level3/catalog_app_addon
+      landingZonePath: /tf/caf/symphony/caf_modules/landingzones/caf_solution/add-ons/catalog_app_addon
+      landingZoneConfigurationPath: /tf/caf/config_app_testapp/level3/catalog_app_addon
       tfState: catalog_service_application.tfstate
     - stack: search_service
       repo: search_application
       landingZonePath: /tf/caf/public/landingzones/caf_solutions/search_app_addon
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level4/search_app_addon
+      landingZoneConfigurationPath: /tf/caf/config_app_testapp/level4/search_app_addon
       tfState: search_application.tfstate
     - stack: frontdoor_service_application
       repo: frontdoor
       landingZonePath: /tf/caf/public/landingzones/caf_solutions/frontdoor_app_addon
-      landingZoneConfigurationPath: /tf/caf/configuration/${environment}/level4/frontdoor_app_addon
+      landingZoneConfigurationPath: /tf/caf/config_app_testapp/level3/level4/frontdoor_app_addon
       tfState: frontdoor_service_application.tfstate
