--- a/caf/config_platform/.gitlab-ci.yml
+++ b/caf/config_platform/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
   environment: 'demo'
   action: 'apply'
-  base_uri: ''
+  group_url: 'https://gitlab-ci-token:${CI_JOB_TOKEN}@${CI_SERVER_HOST}/${CI_PROJECT_NAMESPACE}'
 
 #####################################################################
 # Platform Deployment
@@ -18,7 +18,7 @@ foundations:
     - gitlab-runner-1
   script:
     - |
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules.git
+      git clone ${group_url}/caf_modules.git
 
       az login --identity --username ${MSI_ID_01}
 
@@ -37,7 +37,7 @@ shared_services:
     - gitlab-runner-2
   script:
     - |
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules.git
+      git clone ${group_url}/caf_modules.git
 
       az login --identity --username ${MSI_ID_02}
 
@@ -56,7 +56,7 @@ networking:
     - gitlab-runner-2
   script:
     - |
-      git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${base_uri}/${CI_PROJECT_NAMESPACE}/caf_modules.git
+      git clone ${group_url}/caf_modules.git
 
       az login --identity --username ${MSI_ID_02}
 
