--- a/caf/config_launchpad/.gitlab-ci.yml
+++ b/caf/config_launchpad/.gitlab-ci.yml
@@ -31,7 +31,7 @@
 #   script:
 #     - |
 #       env
-#       git clone ${group_url}/af_modules.git
+#       git clone ${group_url}/caf_modules.git
 
 #       az login --identity --username ${MSI_ID_01}
 
