--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
@@ -9,6 +6,8 @@
       "type": "go",
       "request": "launch",
       "mode": "test",
+      "program": "${workspaceFolder}/tests",
+      "buildFlags": "-tags=level1"
     },
    
   ]
