--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "go.testTags":  "level0,level1,level2,level3,level4",
+  "go.testTags": "level0,level1,level2,networking,sharedsvc,level3,level4",
+  "go.testEnvFile": "${workspaceFolder}/tests/.env",
 }
