--- a/caf/config_app_argocd/.gitlab-ci.yml
+++ b/caf/config_app_argocd/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  environment: 'demo'
+  environment: 'glprod'
   action: 'apply'
   application: 'argocd'
   landingzone_key : 'cluster_aks'
@@ -11,8 +11,31 @@ variables:
 #####################################################################
 
 stages:
+  - validate_level3
   - aks
+  - validate_level4
   - argocd
+
+validate_level3:
+  stage: validate_level3
+  tags:
+    - gitlab-runner-3
+  script:
+    - |
+      echo "pwd=$(pwd)"
+      echo "--------"
+      env
+
+      git clone ${group_url}/caf_modules.git
+
+      az login --identity --username ${MSI_ID}
+
+      /tf/rover/rover.sh ci \
+        -sc ${CI_PROJECT_DIR}/symphony.yml \
+        -b ${CI_PROJECT_DIR} \
+        -l level3 \
+        -env ${environment} \
+        -d
 
 aks:
   stage: aks
@@ -28,9 +51,30 @@ aks:
       -tfstate landing_zone_aks.tfstate \
       -var-folder ${CI_PROJECT_DIR}/level3/aks \
       -parallelism 30 \
-      -level level3 \
+      -level level4 \
       -env ${environment} \
       -a ${action}
+
+validate_level4:
+  stage: validate_level4
+  tags:
+    - gitlab-runner-4
+  script:
+    - |
+      echo "pwd=$(pwd)"
+      echo "--------"
+      env
+
+      git clone ${group_url}/caf_modules.git
+
+      az login --identity --username ${MSI_ID}
+
+      /tf/rover/rover.sh ci \
+        -sc ${CI_PROJECT_DIR}/symphony.yml \
+        -b ${CI_PROJECT_DIR} \
+        -l level2 \
+        -env ${environment} \
+        -d
 
 argocd:
   stage: argocd
