--- a/caf/config_platform/.gitlab-ci.yml
+++ b/caf/config_platform/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  environment: 'demo'
+  environment: 'glprod'
   action: 'apply'
   group_url: 'https://gitlab-ci-token:${CI_JOB_TOKEN}@${CI_SERVER_HOST}/${CI_PROJECT_NAMESPACE}'
 
@@ -8,9 +8,33 @@ variables:
 #####################################################################
 
 stages:
+  - validate_level1
   - foundations
+  - validate_level2
   - shared_services
   - networking
+
+validate_level1:
+  stage: validate_level1
+  tags:
+    - gitlab-runner-1
+  script:
+    - |
+      echo "pwd=$(pwd)"
+      echo "--------"
+      env
+
+      git clone ${group_url}/caf_modules.git
+
+      az login --identity --username ${MSI_ID}
+
+      /tf/rover/rover.sh ci \
+        -sc ${CI_PROJECT_DIR}/symphony.yml \
+        -b ${CI_PROJECT_DIR} \
+        -l level1 \
+        -env ${environment} \
+        -d
+
 
 foundations:
   stage: foundations
@@ -30,6 +54,26 @@ foundations:
       -env ${environment} \
       -a ${action}
 
+validate_level2:
+  stage: validate_level2
+  tags:
+    - gitlab-runner-1
+  script:
+    - |
+      echo "pwd=$(pwd)"
+      echo "--------"
+      env
+
+      git clone ${group_url}/caf_modules.git
+
+      az login --identity --username ${MSI_ID}
+
+      /tf/rover/rover.sh ci \
+        -sc ${CI_PROJECT_DIR}/symphony.yml \
+        -b ${CI_PROJECT_DIR} \
+        -l level2 \
+        -env ${environment} \
+        -d
 
 shared_services:
   stage: shared_services
