--- a/.github/workflows/validate-symphony-yml.yml
+++ b/.github/workflows/validate-symphony-yml.yml
@@ -2,9 +2,12 @@ name: Validate Symphony yaml
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  build:
+  validate:
 
     runs-on: ubuntu-latest
 
